@@ -1,5 +1,10 @@
 <HTML><title>Changelog for Etherape</title><BODY>
-<h3>Overview of changes in CVS Etherape 0.1.7 (Tuesday 02-28-2000):</h3><ul>
+<h3>Overview of changes Etherape 0.1.8 (Wednesday 03-01-2000):</h3><ul>
+<li>First version of interape. Run as etherape -I. I guess I'll
+to change the name to netape now. :-)
+<li>Added node and link timeouts controls.
+</ul>
+<h3>Overview of changes Etherape 0.1.7 (Tuesday 02-29-2000):</h3><ul>
 <li>Pcap filtering added. Now you can use tcpdump style filtering 
 (enclosed in quotes) with the -f option.
 <li>Added libm to autoconf.in for systems with a separate math lib.
